; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/tests/extr_dso-data.c_dsos__delete.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/tests/extr_dso-data.c_dsos__delete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dso = type { i32 }

@dsos = common dso_local global %struct.dso** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @dsos__delete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dsos__delete(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.dso*, align 8
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  br label %5

5:                                                ; preds = %21, %1
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %2, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %24

9:                                                ; preds = %5
  %10 = load %struct.dso**, %struct.dso*** @dsos, align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.dso*, %struct.dso** %10, i64 %12
  %14 = load %struct.dso*, %struct.dso** %13, align 8
  store %struct.dso* %14, %struct.dso** %4, align 8
  %15 = load %struct.dso*, %struct.dso** %4, align 8
  %16 = getelementptr inbounds %struct.dso, %struct.dso* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @unlink(i32 %17)
  %19 = load %struct.dso*, %struct.dso** %4, align 8
  %20 = call i32 @dso__put(%struct.dso* %19)
  br label %21

21:                                               ; preds = %9
  %22 = load i32, i32* %3, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %3, align 4
  br label %5

24:                                               ; preds = %5
  %25 = load %struct.dso**, %struct.dso*** @dsos, align 8
  %26 = call i32 @free(%struct.dso** %25)
  ret void
}

declare dso_local i32 @unlink(i32) #1

declare dso_local i32 @dso__put(%struct.dso*) #1

declare dso_local i32 @free(%struct.dso**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
